# nokamute

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  example.html  pyproject.toml  release.sh
.github/: release.sh
.github/workflows/: ci.yml  pr.yml  pub.yml
benches/: minimax.rs
data/: uhp_tests.txt
fuzz/: Cargo.toml
fuzz/corpus/uhp/: commands  gamestring
fuzz/fuzz_targets/: uhp.rs
src/: board.rs  bug.rs  cli.rs  eval.rs  grid_board.rs  hex_grid.rs  lib.rs  main.rs  mcts.rs  notation.rs  perft.rs  player.rs  python.rs  strategies.rs  uhp_client.rs  uhp_server.rs  uhp_util.rs  wasm.rs  zobrist.rs
