[package]
name = "nokamute"
version = "1.0.0"
authors = ["Eric Roshan-Eisner <eric.d.eisner@gmail.com>"]
edition = "2021"
repository = "https://github.com/edre/nokamute"
readme = "README.md"
license = "MIT"

[dependencies]
git-version = "0.3"
lazy_static = "^1.4.0"
minimax = "0.5.1"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
pico-args = "0.4"
termcolor = "^1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
easybench = "1.1.0"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
# Less efficient memory layout, but more correct in edge cases.
larger-grid = []

[[bench]]
name = "minimax"
harness = false

# For wasm32 library builds.
[lib]
crate-type=["cdylib", "rlib"]
