[package]
name = "nokamute"
description = "Hive AI focused on speed"
version = "1.0.1"
authors = ["Eric Roshan-Eisner <eric.d.eisner@gmail.com>"]
edition = "2021"
repository = "https://github.com/edre/nokamute"
readme = "README.md"
license = "MIT"

[dependencies]
git-version = "0.3"
minimax = { git = "https://github.com/edre/minimax-rs", rev = "bb04bc3ca4623545fbe3c31603335b9138ba50ca" }
rand = "0.9"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
pico-args = "0.4"
termcolor = "^1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
easybench = "1.1.0"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
# Less efficient memory layout, but more correct in edge cases.
larger-grid = []

[[bench]]
name = "minimax"
harness = false

# For wasm32 library builds.
[lib]
crate-type=["cdylib", "rlib"]
