[package]
name = "nokamute"
description = "Hive AI focused on speed"
version = "1.0.3"
authors = ["Eric Roshan-Eisner <eric.d.eisner@gmail.com>"]
edition = "2021"
repository = "https://github.com/edre/nokamute"
readme = "README.md"
license = "MIT"

[dependencies]
git-version = "0.3"
minimax = "0.6.0"
rand = "0.9"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
pico-args = "0.4"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
easybench = "1.1.0"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
# More efficient memory layout, but less correct in edge cases.
smaller-grid = []
# No-op for backwards compatibility.
larger-grid = []
# Python bindings via PyO3
python = ["pyo3"]

[[bench]]
name = "minimax"
harness = false

# cdylib needed for wasm32 and Python (PyO3) builds.
[lib]
crate-type=["cdylib", "rlib"]
